--- a/admin.html
+++ b/admin.html
@@ -60,21 +60,20 @@
 
                 <div class="form-group">
                     <label>رابط البث أو كود التضمين (URL / Iframe)</label>
-                    <input type="text" id="link-url" class="form-control"
-                        placeholder="https://... أو الصق كود <iframe>">
+                    <input type="text" id="link-url" class="form-control" placeholder="مثال: رابط مباشر أو كود تضمين">
                 </div>
 
                 <div style="text-align: center; margin: 15px 0; color: #888; font-size: 0.9rem;">— أو ارفع ملف (صورة أو
                     صوت) من جهازك —</div>
 
                 <div class="form-group">
-                    <input type="file" id="image-upload" class="form-control" accept="image/*,audio/*">
-                    <small style="color: #666; display: block; margin-top: 5px;">يمكنك رفع صورة لتعرض في المشغل أو ملف
-                        صوتي للتشغيل</small>
+                    <input type="file" id="image-upload" class="form-control" accept="image/*,audio/*"
+                        style="padding: 10px;">
+                    <small style="color: #666; display: block; margin-top: 5px;">يمكنك رفع ملف ليعمل كرابط مباشر</small>
                 </div>
 
                 <div class="form-group"
-                    style="display: flex; align-items: center; gap: 10px; background: rgba(255,255,255,0.05); padding: 10px; border-radius: 5px; margin-bottom: 10px;">
+                    style="display: flex; align-items: center; gap: 10px; background: rgba(255,255,255,0.05); padding: 10px; border-radius: 5px; margin-bottom: 10px; margin-top: 15px;">
                     <input type="checkbox" id="link-protection" style="width: 20px; height: 20px;">
                     <label for="link-protection" style="margin: 0; cursor: pointer;">إظهار رسالة 'نظام الحماية' بدلاً من
                         الفيديو (Hide Video)</label>
